Working "insert" from frontend